Fix persistent badge contrast ratio

--- a/src/components/Gallery/Grid/GridElement.css
+++ b/src/components/Gallery/Grid/GridElement.css
@@ -103,10 +103,9 @@
   top: 25px;
   right: -75px;
   width: 200px;
-  background: red;
+  background: #eb0000;
   color: white;
   transition: opacity ease 0.3s;
-  font-size: 18px;
 }
 
 @media only screen and (min-device-width: 1024px) {
